--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
+    "@react-hook/size": "^2.1.2",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
     "next": "12.1.5",
@@ -25,6 +26,7 @@
     "@types/react-dom": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "meow": "^10.1.2",
     "typescript": "4.6.3"
   }
 }
