--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@react-hook/size": "^2.1.2",
+    "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
     "next": "12.1.5",
@@ -24,9 +25,17 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
-    "eslint": "8.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "meow": "^10.1.2",
+    "prettier": "^2.6.2",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "typescript": "4.6.3"
   }
 }
