--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chrisbook/bridge-core": "^1.0.0",
+    "@babel/preset-env": "^7.17.12",
+    "@chrisbook/bridge-core": "^1.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
