--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
-    "@chrisbook/bridge-core": "^1.0.4",
+    "@chrisbook/bridge-core": "^1.0.5",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
@@ -21,7 +21,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-firebase-hooks": "^5.0.3"
+    "react-firebase-hooks": "^5.0.3",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
