--- a/package.json
+++ b/package.json
@@ -2,23 +2,21 @@
   "name": "bridge",
   "version": "0.1.0",
   "private": true,
-  "main": "firebaseFunctions.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
-    "@chrisbook/bridge-core": "^1.0.6",
+    "@chrisbook/bridge-core": "^1.0.7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@react-hook/size": "^2.1.2",
     "eslint-config-prettier": "^8.5.0",
     "firebase": "^9.6.11",
-    "firebase-functions": "^3.21.2",
     "firebaseui": "^6.0.1",
     "next": "12.1.5",
     "react": "18.0.0",
