--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "@react-hook/size": "^2.1.2",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
-    "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "^12.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "recharts": "^2.1.10"
+    "recharts": "^2.1.12"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
     "@types/node": "17.0.25",
-    "@types/react": "18.0.5",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
