--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.17.12",
-    "@chrisbook/bridge-core": "^1.0.10",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@react-hook/size": "^2.1.2",
     "firebase": "^9.6.11",
     "firebaseui": "^6.0.1",
-    "next": "^12.2.3",
+    "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
-    "recharts": "^2.1.12"
+    "recharts": "2.1.12"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.6",
