--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
     "axios": "^0.27.2",
     "firebase-admin": "^10.0.2",
