--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:emulators": "firebase emulators:exec 'npm run dev'",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
