--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:emulators": "firebase emulators:exec 'NEXT_PUBLIC_USE_EMULATORS=1 npm run dev'",
+    "dev:emulators": "NEXT_PUBLIC_USE_EMULATORS=1 npm run dev",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
@@ -15,12 +15,11 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.2",
     "@react-hook/size": "^2.1.2",
-    "firebase": "^9.6.11",
-    "firebaseui": "^6.0.1",
+    "firebase": "^9.9.4",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.0.3",
+    "reactfire": "^4.2.2",
     "recharts": "2.1.12"
   },
   "devDependencies": {
