--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.17.12",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.2",
+    "@babel/preset-env": "^7.19.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.8",
     "@react-hook/size": "^2.1.2",
-    "firebase": "^9.9.4",
-    "next": "^12.2.5",
+    "firebase": "^9.11.0",
+    "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "reactfire": "^4.2.2",
     "recharts": "2.1.12"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.1.6",
-    "@types/node": "17.0.25",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "18.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
+    "@next/eslint-plugin-next": "^12.3.1",
+    "@types/node": "18.8.3",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.25.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "meow": "^10.1.2",
-    "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "^4.4.4"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.9",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "meow": "^10.1.5",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.1.1",
+    "typescript": "^4.8.4"
   }
 }
